Add Tor hidden service container

--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -71,8 +71,8 @@ http {
 	add_header		Content-Security-Policy "frame-ancestors 'none'; default-src 'none'; font-src 'self'; img-src 'self'; media-src 'self'; style-src 'self';";
 
 	server {
-		listen			8080 default;		# listen on HTTP port for ipv4 (avoiding port 80 so we don't need root privs to listen)
-#		listen			[::]:8080 default;	# listen on HTTP port for ipv6 (avoiding port 80 so we don't need root privs to listen)
+		listen			8080;		# listen on HTTP port for ipv4 (avoiding port 80 so we don't need root privs to listen)
+#		listen			[::]:8080;	# listen on HTTP port for ipv6 (avoiding port 80 so we don't need root privs to listen)
 		root			/usr/share/nginx/html/site;
 		index			index.php index.html;
 
