--- a/docker-hiddenservice/Dockerfile
+++ b/docker-hiddenservice/Dockerfile
@@ -1,7 +1,4 @@
-# We need to use Alpine's "edge" branch since it seems to be
-# the only one that currently provides Tor via APK.
-
-FROM alpine:edge
+FROM alpine:latest
 MAINTAINER Alex Haydock <alex@alexhaydock.co.uk>
 
 ENV HOME /var/lib/tor
@@ -16,7 +13,7 @@ RUN apk --no-cache add \
 ADD torrc /etc/tor/torrc
 
 # Add the final line to our torrc, telling Tor which IP and port our hidden service is at
-RUN echo "HiddenServicePort 80 $HIDDENSVCIP:$HIDDENSVCPT"
+RUN echo "HiddenServicePort 80 $HIDDENSVCIP:$HIDDENSVCPT" >> /etc/tor/torrc
 
 # Set correct permissions
 RUN chown -R tor /etc/tor
@@ -24,4 +21,5 @@ RUN chown -R tor /var/lib/tor
 RUN chmod -R 700 /var/lib/tor
 
 USER tor
+#CMD [ "/bin/sh" ]
 CMD [ "tor" ]
