--- a/docker-hiddenservice/cccptor.service
+++ b/docker-hiddenservice/cccptor.service
@@ -8,7 +8,7 @@ TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker stop cccptor
 ExecStartPre=-/usr/bin/docker rm cccptor
 ExecStartPre=-/usr/bin/docker pull ajhaydock/cccp:tor
-ExecStart=/usr/bin/docker run --cap-drop=all --name cccptor -d -v /home/cats/hiddenservice:/var/lib/tor/hiddenservice ajhaydock/cccp:tor
+ExecStart=/usr/bin/docker run --cap-drop=all --name cccptor -v /home/cats/hiddenservice:/var/lib/tor/hiddenservice ajhaydock/cccp:tor
 ExecStop=/usr/bin/docker stop cccptor
 
 [Install]
