--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -3,18 +3,25 @@
 # Based on the default nginx config file with some tweaks to
 # secure an .onion domain pointing directly at this server.
 
-#user			nginx; # This user is named 'nginx' on Red Hat family distributions like CentOS and 'www-data' on Debian-based distributions.
-worker_processes	1;
+#user                                   nginx; # This user is named 'nginx' on Fedora/CentOS and 'www-data' on Debian-based distributions. (Disabled for Docker Container)
+worker_processes			1;
+#worker_priority			5; # Equal to "nice=5". This is to prevent attacks on nginx from bringing down the machine (and/or being used as timing attacks). (Disabled)
 
-error_log		/var/log/nginx/error.log warn;
-pid			/var/run/nginx.pid; # Set for Fedora. Probably in a different place on Debian.
+error_log				/var/log/nginx/error.log warn;
+pid					/var/run/nginx.pid; # Set for Fedora/CentOS. Probably in a different place on Debian.
 
 events {
-	worker_connections  1024;
+	worker_connections		1024; # Number of connections per worker process
 }
 
 http {
 	access_log			/dev/null; # Anonymised logging is handled by my SSL terminator instead of at Docker container endpoints.
+
+	# Timeouts to ensure we do not keep connections open longer then necessary to reduce resource usage and deny Slowloris type attacks.
+	client_body_timeout		4s; # maximum time between packets the client can pause when sending nginx any data
+	client_header_timeout		4s; # maximum time the client has to send the entire header to nginx
+	keepalive_timeout		75s; # timeout which a single keep-alive client connection will stay open
+	send_timeout			24s; # maximum time between packets nginx is allowed to pause when sending the client data
 
 	# Various options
 	charset				utf-8;
@@ -64,6 +71,7 @@ http {
 	add_header		X-Content-Type-Options nosniff;
 	add_header		X-XSS-Protection "1; mode=block";
 	add_header		Cache-Control "public";
+	add_header		Referrer-Policy "no-referrer"; # Only supported from Firefox 52+, but we can now control referrer behaviour with a HTTP header
 
 	# Manage CSP header (https://wiki.mozilla.org/Security/CSP/Specification)
 	## This policy will block basically all scripts, plugins, child frames (YouTube embeds etc.) and will need reviewing if I ever start using those but, for now, this is going to be pretty secure.
@@ -93,20 +101,24 @@ http {
 			include fastcgi_params;
 		}
 
-		# Special location blocks
-		location /.git { return 418; }
-		location /wp-admin { return 418; }
-		location /wp-login { return 418; }
-		location /install.php { return 418; }
-		location /admin { return 418; }
-		location /server-status { return 418; }
+		# Other special location blocks
+		location = /install.php { return 404; }
+		location = /server-status { return 404; }
+		location = /.htaccess { return 404; }
+		location /.git { return 404; }
+		location /admin { return 404; }
+		location /wp-admin { return 404; }
+		location /wp-login { return 404; }
 
-		# Error pages
-		error_page 404 /404/; location = /404/ { }
-		error_page 418 /418/; location = /418/ { }
-		error_page 500 /500/; location = /500/ { }
-		error_page 502 /502/; location = /502/ { }
-		error_page 503 /503/; location = /503/ { }
-		error_page 504 /504/; location = /504/ { }
+		# Purge some headers that reveal too much
+		more_clear_headers	"Age";
+		more_set_headers	"Server: '; DROP TABLE headers; --";
+		more_clear_headers	"Via";
+		more_clear_headers	"X-From-Nginx";
+		more_clear_headers	"X-NA";
+		more_clear_headers	"X-Powered-By";
+		more_clear_headers	"X-Request-Id";
+		more_clear_headers	"X-Runtime";
+		more_clear_headers	"X-Varnish";
 	}
 }
