Auto-redirect to onion upon detection of TBB

--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -94,11 +94,20 @@ http {
 		location ~ \.php$ {
 			try_files $uri =404;
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-#			fastcgi_pass unix:/var/run/php5-fpm.sock; # Debian-based
-			fastcgi_pass unix:/run/php-fpm/www.sock; # Fedora-based
+#			fastcgi_pass unix:/var/run/php5-fpm.sock; # Pass to php-fpm Unix socket (Debian location)
+			fastcgi_pass unix:/run/php-fpm/www.sock; # Pass to php-fpm Unix socket (CentOS/Fedora location)
 			fastcgi_index index.php;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			include fastcgi_params;
+		}
+
+		# If the client sent the HTTP Host header for the clearnet site, then test whether they are running the Tor Browser.
+		# If they are, redirect to the onion domain. (We need to do the first test so we don't end up in an endless loop since
+		# this Nginx instance is serving both the clearnet site and the onion domain.
+		if ( $host ~* creativecommonscatpictures.com ) {
+			if ( $http_user_agent = 'Mozilla/5.0 (Windows NT 6.1; rv:45.0) Gecko/20100101 Firefox/45.0' ) {
+				return 301 http://kittenslbrpopxz7.onion$request_uri;
+			}
 		}
 
 		# Other special location blocks
