--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -104,11 +104,10 @@ http {
 		# If the client sent the HTTP Host header for the clearnet site, then test whether they are running the Tor Browser.
 		# If they are, redirect to the onion domain. (We need to do the first test so we don't end up in an endless loop since
 		# this Nginx instance is serving both the clearnet site and the onion domain.
-		if ( $host ~* creativecommonscatpictures.com ) {
-			if ( $http_user_agent = 'Mozilla/5.0 (Windows NT 6.1; rv:45.0) Gecko/20100101 Firefox/45.0' ) {
-				return 301 http://kittenslbrpopxz7.onion$request_uri;
-			}
-		}
+		set $test "null"; # Create an empty variable
+		if ( $host ~* creativecommonscatpictures.com ) { set $test "clearnet"; }
+		if ( $http_user_agent = 'Mozilla/5.0 (Windows NT 6.1; rv:45.0) Gecko/20100101 Firefox/45.0' ) { set $test "${test}+torbrowser"; }
+		if ( $test = "clearnet+torbrowser" ) { return 301 http://kittenslbrpopxz7.onion$request_uri; }  # Only fire the 301 if the user has passed both the 'accessed via clearnet' and 'using torbrowser' tests.
 
 		# Other special location blocks
 		location = /install.php { return 404; }
