--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -29,6 +29,7 @@ http {
 	ignore_invalid_headers		on;
 	include				/etc/nginx/conf.d/*.conf;
 	include				/etc/nginx/mime.types;
+	include				/etc/nginx/torexits.conf;
 	keepalive_requests		50;  # Number of requests per connection (does not affect SPDY)
 	keepalive_disable		none; # Allow all browsers to use keepalive connections
 	max_ranges			1; # Only allow a single range header - for resumed downloads, and to stop large range header DoS attacks
@@ -101,13 +102,12 @@ http {
 			include fastcgi_params;
 		}
 
-		# If the client sent the HTTP Host header for the clearnet site, then test whether they are running the Tor Browser.
-		# If they are, redirect to the onion domain. (We need to do the first test so we don't end up in an endless loop since
-		# this Nginx instance is serving both the clearnet site and the onion domain.
-		set $test "null"; # Create an empty variable
-		if ( $host ~* creativecommonscatpictures.com ) { set $test "clearnet"; }
-		if ( $http_user_agent = 'Mozilla/5.0 (Windows NT 6.1; rv:45.0) Gecko/20100101 Firefox/45.0' ) { set $test "${test}+torbrowser"; }
-		if ( $test = "clearnet+torbrowser" ) { return 301 http://kittenslbrpopxz7.onion$request_uri; }  # Only fire the 301 if the user has passed both the 'accessed via clearnet' and 'using torbrowser' tests.
+		# Redirect users of Tor exits
+		# (Please note the use of 'include' on the /etc/nginx/torexits.conf file up in the http directive
+		if ($torExit) {
+			# If we're listed in the torexits.conf file as being a Tor exit, redirect using a 301.
+			return 301 http://kittenslbrpopxz7.onion$request_uri;
+		}
 
 		# Other special location blocks
 		location = /install.php { return 404; }
