Locate real client IP using forwarded header from SSL terminator

--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -102,11 +102,15 @@ http {
 			include fastcgi_params;
 		}
 
+		# Since we're behind a reverse proxy, we need to let nginx know, so that it doesn't mistake our proxy IP for the real client IP when trying to determine if a client is arriving via Tor
+		set_real_ip_from	172.16.16.20; # Reverse proxy IP here
+		real_ip_header		X-Real-IP; # We need to make sure that the proxy is configured to use this with "proxy_set_header X-Real-IP $remote_addr;" on the proxy side.
+
 		# Redirect users of Tor exits
-		# (Please note the use of 'include' on the /etc/nginx/torexits.conf file up in the http directive
+		# Please note the use of 'include' on the /etc/nginx/torexits.conf file up in the http directive
 		if ($torExit) {
 			# If we're listed in the torexits.conf file as being a Tor exit, redirect using a 301.
-			return 301 http://kittenslbrpopxz7.onion$request_uri;
+			return 301	http://kittenslbrpopxz7.onion$request_uri;
 		}
 
 		# Other special location blocks
