--- a/docker-hiddenservice/nginx.conf
+++ b/docker-hiddenservice/nginx.conf
@@ -1,4 +1,4 @@
-user                            nginx; # Run as nginx user
+#user                           nginx; # Run as nginx user
 worker_processes                auto;
 
 pid                             /run/nginx.pid;
@@ -20,14 +20,39 @@ http {
 
         include                 /etc/nginx/conf.d/*.conf;
         include                 /etc/nginx/mime.types;
+
         default_type            application/octet-stream;
+	ignore_invalid_headers		on;
+
+        # Compression Options
+        gzip				on;
+        gzip_buffers			4 32k; # Set the buffer size of gzip, 4 32k is good enough for almost everybody. (Well, according to the tutorial I copied this line from...)
+        gzip_proxied			any; # Allows compressed responses for any request even from proxies
+        gzip_types			text/html
+                                        text/css
+                                        text/xml
+                                        application/javascript
+                                        application/atom+xml
+                                        application/rss+xml
+                                        text/plain
+                                        application/font-woff
+                                        application/json
+                                        application/pdf
+                                        application/x-x509-ca-cert
+                                        application/xhtml+xml
+                                        application/xspf+xml; # Here I just copied in all of the MIME types that looked compressible from /etc/nginx/mime.types (leaving out ones I will clearly never use)
+        gzip_vary			on; # Enables response header of "Vary: Accept-Encoding
 
 # Site to host as onion service
   server {
         listen                  unix:/tmp/nginx-listen.sock; # Listen on a Unix socket (non-SSL)
 
+        # Allow only Unix socket connections
+        allow "unix:";
+        deny all;
+
         location / {
-        proxy_pass		http://172.16.16.80/;
+        proxy_pass		http://172.16.16.80/; # If you set this to a hostname instead of IP, you might need to specify a DNS server with the 'resolver' directive.
         proxy_read_timeout      90;
 
         # These directives define the headers that will be passed from the CLIENT to the SERVER.
@@ -40,7 +65,7 @@ http {
         proxy_hide_header       X-Content-Type-Options;
         proxy_hide_header       X-Frame-Options;
         proxy_hide_header       X-XSS-Protection;
-  		}
+      }
 
       # Deny special location blocks
       location = /install.php   { return 404; }
