--- a/docker-hiddenservice/onion.service
+++ b/docker-hiddenservice/onion.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Creative Commons Cat Pictures Onion Service Container
+Description=Onion Service Docker Container (ajhaydock on GitHub)
 After=docker.service
 Requires=docker.service
 
@@ -8,7 +8,7 @@ TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker stop onion
 ExecStartPre=-/usr/bin/docker rm onion
 ExecStartPre=-/usr/bin/docker pull ajhaydock/onion
-ExecStart=/usr/bin/docker run --cap-drop=all --name cccptor -v /home/cats/hiddenservice:/opt/onion/hiddenservice ajhaydock/cccptor
+ExecStart=/usr/bin/docker run --cap-drop=all --name onion -v /home/cats/nginx.conf/etc/nginx/nginx.conf:ro -v /home/cats/hiddenservice:/opt/onion/hiddenservice ajhaydock/onion
 ExecStop=/usr/bin/docker stop onion
 
 [Install]
