--- a/docker-hiddenservice/nginx.conf
+++ b/docker-hiddenservice/nginx.conf
@@ -9,8 +9,8 @@ events {
 
 http {
         # Disable logging
-        access_log              off;
-        error_log               off;
+        access_log              /dev/null;
+        error_log               /dev/null;
 
         sendfile                on;
         tcp_nopush              on;
@@ -22,9 +22,18 @@ http {
         include                 /etc/nginx/mime.types;
 
         default_type            application/octet-stream;
-	ignore_invalid_headers		on;
+	ignore_invalid_headers  on;
 
-        # Compression Options
+        # Proxy perf tweaks
+        proxy_buffering                 on;
+        proxy_buffers                   16 64k;
+        proxy_buffer_size               64k;
+        proxy_busy_buffers_size         512k;
+        proxy_max_temp_file_size        2048k;
+        proxy_temp_file_write_size      64k;
+        proxy_temp_path                 "/tmp";
+
+        # Compression options
         gzip				on;
         gzip_buffers			4 32k; # Set the buffer size of gzip, 4 32k is good enough for almost everybody. (Well, according to the tutorial I copied this line from...)
         gzip_proxied			any; # Allows compressed responses for any request even from proxies
@@ -52,16 +61,23 @@ http {
         deny all;
 
         location / {
-        proxy_pass		http://172.16.16.80/; # If you set this to a hostname instead of IP, you might need to specify a DNS server with the 'resolver' directive.
+        proxy_pass		http://172.16.16.80; # If you set this to a hostname instead of IP, you might need to specify a DNS server with the 'resolver' directive.
         proxy_read_timeout      90;
 
         # These directives define the headers that will be passed from the CLIENT to the SERVER.
-        proxy_set_header        Host $http_host;
+        ## Here we just lie to the server and pretend the client is requesting the clearnet site.
+        ## As a bonus, this will protect you from any leaks that might otherwise be exhibited by your remote server
+        ## if the client sends us a maliciously-crafted Host header that reads either "localhost" or "127.0.0.1".
+        proxy_set_header        Host "creativecommonscatpictures.com";
 
         # These directives define the headers that will be ignored and not passed from SERVER to CLIENT
         proxy_hide_header       Cache-Control;
         proxy_hide_header       Content-Security-Policy;
+        proxy_hide_header       Content-Security-Policy-Report-Only;
+        proxy_hide_header       Public-Key-Pins;
+        proxy_hide_header       Public-Key-Pins-Report-Only;
         proxy_hide_header       Referrer-Policy;
+        proxy_hide_header       Strict-Transport-Security;
         proxy_hide_header       X-Content-Type-Options;
         proxy_hide_header       X-Frame-Options;
         proxy_hide_header       X-XSS-Protection;
