--- a/docker-site/nginx.conf
+++ b/docker-site/nginx.conf
@@ -3,12 +3,10 @@
 # Based on the default nginx config file with some tweaks to
 # secure an .onion domain pointing directly at this server.
 
-#user                                   nginx; # This user is named 'nginx' on Fedora/CentOS and 'www-data' on Debian-based distributions. (Disabled for Docker Container)
-worker_processes			1;
-#worker_priority			5; # Equal to "nice=5". This is to prevent attacks on nginx from bringing down the machine (and/or being used as timing attacks). (Disabled)
-
 error_log				/var/log/nginx/error.log warn;
 pid					/var/run/nginx.pid; # Set for Fedora/CentOS. Probably in a different place on Debian.
+
+worker_processes			auto;
 
 events {
 	worker_connections		1024; # Number of connections per worker process
