--- a/docker-site/Dockerfile
+++ b/docker-site/Dockerfile
@@ -8,7 +8,7 @@
 #        docker run --cap-drop=all --name cccp -p 80:8080 -d cccp
 #
 
-FROM ajhaydock/nginx
+FROM fedora
 MAINTAINER Alex Haydock <alex@alexhaydock.co.uk>
 
 ENV SITETODEPLOY https://github.com/ajhaydock/CreativeCommonsCatPictures
@@ -18,30 +18,27 @@ USER root
 WORKDIR /root
 
 # Install php-fpm
-RUN yum install -y \
-      php-fpm && \
-    yum clean all
+RUN dnf install -y nginx php-fpm git && dnf clean all
 
-# Add my custom nginx config, and the script to generate a list of Tor exits then start php-fpm and nginx together.
+# Clone site from Git into HTML dir
+RUN git clone $SITETODEPLOY /usr/share/nginx/html/kittens
+
+# Add my custom nginx config, and the script to generate
+# a list of Tor exits then start php-fpm and nginx together.
 ADD nginx.conf /etc/nginx/nginx.conf
 ADD kittens.sh /usr/share/nginx/kittens
 
-# Edit PHP config to listen on a Unix socket rather than a port
-RUN perl -pi -e 's,^listen = 127.0.0.1:9000,listen = /run/php-fpm/www.sock,' /etc/php-fpm.d/www.conf
+# nginx permissions
+RUN touch /run/nginx.pid && chown -R nginx:nginx /run/nginx.pid
+RUN chown -R nginx:nginx /usr/share/nginx && chmod -R 555 /usr/share/nginx
+RUN chown -R nginx:nginx /etc/nginx
 
-# Deploy site into HTML dir
-RUN rm -rf "/usr/share/nginx/html/" && \
-    git clone $SITETODEPLOY /usr/share/nginx/html
+# PHP permissions
+RUN chown -R nginx:nginx /var/log/php-fpm
+RUN chown -R nginx:nginx /run/php-fpm
 
-# Make sure the permissions are set correctly on our nginx and php-fpm config dirs, pidfiles and Unix sockets so that we can run as non-root.
-RUN chown -R nginx:nginx /usr/share/nginx && \
-    chmod -R 555 /usr/share/nginx && \
-    touch /var/run/nginx.pid && \
-    chown -R nginx:nginx /var/run/nginx.pid && \
-    chown -R nginx:nginx /etc/nginx && \
-    chown -R nginx:nginx /var/log/php-fpm && \
-    chown -R nginx:nginx /run/php-fpm && \
-    chmod +x /usr/share/nginx/kittens
+# Script permissions
+RUN chmod +x /usr/share/nginx/kittens
 
 # Launch Nginx in container as non-root
 USER nginx
